--- a/server/lambdas/serverless.yml
+++ b/server/lambdas/serverless.yml
@@ -102,8 +102,14 @@ functions:
           method: GET
           path: /self/earnings/{earningsType+}
           authorizer: serviceAuthorizer
+      - httpApi:
+          method: DELETE
+          path: /self
+          authorizer: serviceAuthorizer
     environment:
       USERS_TABLE: ${ssm:/${self:service}/${self:provider.stage}/info/dynamo/table/users}
+      SESSIONS_TABLE:  ${ssm:/${self:service}/${self:provider.stage}/info/dynamo/table/sessions}
+      EARNINGS_TABLE: ${ssm:/${self:service}/${self:provider.stage}/info/dynamo/table/earnings}
       DYNAMO_ENDPOINT: "https://dynamodb.${self:provider.region}.amazonaws.com"
     role: ${ssm:/${self:service}/${self:provider.stage}/role/lambda}
     package:
