Saves weighted_avg_coherence with emwave data. Adds ability to update db schema by version.

--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "mathjs": "^12.3.0",
     "pay-info": "file:../common/pay-info",
     "pvs-breath-pacer": "github:EmotionCognitionLab/pvs-breath-pacer#semver:^1.0.1",
+    "semver": "^7.6.2",
     "vue": "^3.4.7",
     "vue-router": "^4.2.5"
   }
