Always keep 1 find-hrv-peaks instance running

--- a/server/lambdas/serverless.yml
+++ b/server/lambdas/serverless.yml
@@ -58,6 +58,7 @@ functions:
           path: /rhrv
           method: post
     timeout: 30
+    provisionedConcurrency: 1
   process-sqlite-dbs:
     handler: process-sqlite-dbs/process-sqlite-dbs.handler
     events:
