RHRV docker file changes to deal with missing packages

--- a/server/lambdas/rhrv/Dockerfile
+++ b/server/lambdas/rhrv/Dockerfile
@@ -3,13 +3,17 @@ FROM public.ecr.aws/lambda/provided:latest-arm64
 RUN  dnf -y install R-core \
     && dnf -y install R-devel \
     && dnf -y install openssl-devel \
-    && dnf -y install libcurl-devel
+    && dnf -y install libcurl-devel \ 
+    && dnf -y install gmp-devel \
+    && dnf -y install mpfr-devel
 
 RUN Rscript -e "install.packages(c('httr', 'jsonlite', 'RHRV', 'logger', 'pracma'), repos = 'https://cloud.r-project.org/')"
 
 RUN dnf remove -y R-devel \
     && dnf -y remove openssl-devel \
     && dnf -y remove libcurl-devel \
+    && dnf -y remove mpfr-devel \
+    && dnf -y remove gmp-devel \
     && dnf clean all
 
 COPY runtime.R functions.R ${LAMBDA_TASK_ROOT}/
